--- a/index.html
+++ b/index.html
@@ -226,13 +226,17 @@ button[type="submit"] {
             <img class="logo-morante" src="logomorante.png" alt="Logo Biblioteca Morante">
         </div>
     </header>
+
+    
    
 
     <div class="content-wrapper">
         <div class="nav-icons">
-            <a href="https://www.bibliotechediroma.it/opac/news/donazioni/33158" title="Indietro">&lt;</a>
+            <a href="https://www.bibliotechediroma.it/opac/news/donazioni/33158" title="Indietro">
+                <img src="left.svg" alt="Indietro" style="height: 22px; width: 22px;">
+            </a>
             <a href="https://www.bibliotechediroma.it/opac/.do" title="Home">
-                <i class="fas fa-home"></i>
+                <img src="home.svg" alt="Home" style="height: 22px; width: 22px;">
             </a>
         </div>
 
