--- a/termini.html
+++ b/termini.html
@@ -372,7 +372,9 @@
 
     <div class="library-name">
                 <img src="location.svg" alt="Location">
-                <span>Biblioteca Elsa Morante</span>
+                <a href="https://www.bibliotechediroma.it/opac/library/Biblioteca%20Elsa%20Morante/RMBO2" target="_blank">
+                    Biblioteca Elsa Morante
+                </a>
             </div>
 
 
