--- a/raccolta.html
+++ b/raccolta.html
@@ -308,14 +308,20 @@
 
         <div class="container-fluid mx-auto px-4 content-section">
     <div class="bg-white shadow-md rounded-lg p-6 mb-6">
+
+
+        
         <div class="flex items-center mb-4" style="color: #970a2c;">
-            <img src="location.svg" alt="Location Icon" class="mr-2" style="height: 24px; width: 24px;">
-            <a href="https://www.bibliotechediroma.it/opac/library/Biblioteca%20Elsa%20Morante/RMBO2" 
-               class="text-2xl hover:underline" 
-               style="color: #970a2c;">
-                Biblioteca Elsa Morante
-            </a>
-        </div>
+    <img src="location.svg" alt="Location Icon" class="mr-2" style="height: 24px; width: 24px;">
+    <a href="https://www.bibliotechediroma.it/opac/library/Biblioteca%20Elsa%20Morante/RMBO2" 
+       class="text-xl hover:underline"  <!-- Cambiato da text-2xl a text-xl -->
+       style="color: #970a2c;">
+        Biblioteca Elsa Morante
+    </a>
+</div>
+
+
+        
         <h1 class="text-3xl font-bold text-left" style="color: #970a2c;">Centri di Raccolta per Donazione Libri e Audiovisivi</h1>
     </div>
 
