--- a/raccolta.html
+++ b/raccolta.html
@@ -311,14 +311,15 @@
 
 
         
-        <div class="flex items-center mb-4" style="color: #970a2c;">
+     <div class="flex items-center mb-4" style="color: #970a2c;">
     <img src="location.svg" alt="Location Icon" class="mr-2" style="height: 24px; width: 24px;">
     <a href="https://www.bibliotechediroma.it/opac/library/Biblioteca%20Elsa%20Morante/RMBO2" 
-       class="text-xl hover:underline"  <!-- Cambiato da text-2xl a text-xl -->
+       class="text-xl hover:underline" 
        style="color: #970a2c;">
         Biblioteca Elsa Morante
     </a>
 </div>
+
 
 
         
