--- a/index.html
+++ b/index.html
@@ -250,6 +250,18 @@ button[type="submit"] {
         
 
         <div class="max-w-4xl mx-auto bg-white p-8 rounded-lg shadow-md mt-2">
+
+<div class="flex items-center justify-center mb-2" style="color: #970a2c;">
+    <img src="location.svg" alt="Location Icon" class="mr-2" style="height: 24px; width: 24px;">
+    <a href="https://www.bibliotechediroma.it/opac/library/Biblioteca%20Elsa%20Morante/RMBO2" 
+       class="text-xl hover:underline" 
+       style="color: #970a2c;">
+        Biblioteca Elsa Morante
+    </a>
+</div>
+
+
+            
             <div class="flex flex-col items-center justify-center mb-10 text-center space-y-4 px-4">
                 <h1 class="text-3xl md:text-4xl text-slate-700 font-bold leading-tight text-center sm:text-xl md:text-3xl">
                     Donazione di libri
