--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@ button[type="submit"] {
         <div class="flex items-center gap-2 mb-2">
             <img src="location.svg" alt="Posizione" class="h-5 w-5 text-gray-600">
             <a href="https://www.bibliotechediroma.it/opac/library/Biblioteca%20Elsa%20Morante/RMBO2" 
-               class="text-sm text-blue-600 hover:underline hover:text-blue-800 transition-colors">
+               class="text-base text-red-700 hover:underline hover:text-red-900 transition-colors font-semibold">
                 Biblioteca Elsa Morante
             </a>
         </div>
