--- a/index.html
+++ b/index.html
@@ -249,12 +249,12 @@ button[type="submit"] {
 
         
 
- <div class="max-w-4xl mx-auto bg-white p-8 rounded-lg shadow-md mt-2">
+<div class="max-w-4xl mx-auto bg-white p-8 rounded-lg shadow-md mt-2">
     <div class="flex flex-col mb-10 text-left space-y-4 px-4">
         <div class="flex items-center gap-2 mb-2">
             <img src="location.svg" alt="Posizione" class="h-5 w-5 text-gray-600">
             <a href="https://www.bibliotechediroma.it/opac/library/Biblioteca%20Elsa%20Morante/RMBO2" 
-               class="text-lg text-red-700 hover:underline hover:text-red-900 transition-colors">
+               class="text-base text-red-700 hover:underline hover:text-red-900 transition-colors">
                 Biblioteca Elsa Morante
             </a>
         </div>
@@ -262,7 +262,6 @@ button[type="submit"] {
             Donazione di libri
         </h1>
     </div>
-</div>
 
 
 
