--- a/raccolta.html
+++ b/raccolta.html
@@ -70,9 +70,6 @@
             gap: 1rem;
         }
 
-
-
-        
    .content-wrapper {
     max-width: 900px;
     width: 100%;
@@ -165,11 +162,6 @@
             text-decoration: underline;
         }
 
-
-
-
-
-
      .print-button {
     background: none;
     border: none;
@@ -188,8 +180,6 @@
     .print-button {
         color: var(--primary);  /* Assicurati che l'icona mantenga il colore originale anche in stampa */
     }
-
-
 
             body {
                 background: white;
@@ -259,6 +249,10 @@
             a[href^="https://www.youtube.com"]::after {
                 content: "";
             }
+
+            .flex.items-center.mb-4 {
+                display: none !important; /* Nasconde la sezione "Biblioteca Elsa Morante" */
+            }
         }
     </style>
 </head>
@@ -319,8 +313,6 @@
         Biblioteca Elsa Morante
     </a>
 </div>
-
-
 
         
         <h1 class="text-3xl font-bold text-left" style="color: #970a2c;">Centri di Raccolta per Donazione Libri e Audiovisivi</h1>
