--- a/index.html
+++ b/index.html
@@ -34,24 +34,26 @@ button[type="submit"] {
 
 /* Aggiorna i cerchietti numerati e il pulsante "Aggiungi Libro" con il colore rosso specificato */
 .book-counter {
-    background-color: #ff4347 !important;
-}
-
-/* Stile per il pulsante "Aggiungi Libro" */
-.book-entry > button[type="button"].add-book-btn {
-    width: 100%;
-    padding: 0.75rem 1rem;
-    background-color: #ff4347;
+    background: linear-gradient(to bottom right, var(--verde-chiaro), var(--verde-scuro));
     color: white;
-    border: none;
-    border-radius: 0.375rem;
-    transition: background-color 0.3s ease;
-    margin-top: 0.5rem;
 }
 
-.book-entry > button[type="button"].add-book-btn:hover {
-    background-color: #d9292e;
-}
+/* Stile per il pulsante "Aggiungi Libro" con sfumatura verde */
+        .book-entry > button[type="button"].add-book-btn {
+            width: 100%;
+            padding: 0.75rem 1rem;
+            background: linear-gradient(to bottom right, var(--verde-chiaro), var(--verde-base));
+            color: white;
+            border: none;
+            border-radius: 0.375rem;
+            transition: background 0.3s ease;
+            margin-top: 0.5rem;
+            box-shadow: 0 2px 5px rgba(0,0,0,0.2);
+        }
+
+  .book-entry > button[type="button"].add-book-btn:hover {
+            background: linear-gradient(to bottom right, var(--verde-base), var(--verde-scuro));
+        }
 
 /* Stile per il pulsante di rimozione (x) */
 .book-entry > button[type="button"].remove-book-btn {
