--- a/index.html
+++ b/index.html
@@ -32,28 +32,38 @@ button[type="submit"] {
     background-color: #970a2c !important;
 }
 
-/* Aggiorna i cerchietti numerati e il pulsante "Aggiungi Libro" con il colore rosso specificato */
+
+
+
+/* Aggiorna il colore del contatore dei libri con una sfumatura di verde */
 .book-counter {
-    background: linear-gradient(to bottom right, var(--verde-chiaro), var(--verde-scuro));
-    color: white;
+    background: linear-gradient(to bottom right, #34d399, #10b981);
 }
 
 /* Stile per il pulsante "Aggiungi Libro" con sfumatura verde */
-        .book-entry > button[type="button"].add-book-btn {
-            width: 100%;
-            padding: 0.75rem 1rem;
-            background: linear-gradient(to bottom right, var(--verde-chiaro), var(--verde-base));
-            color: white;
-            border: none;
-            border-radius: 0.375rem;
-            transition: background 0.3s ease;
-            margin-top: 0.5rem;
-            box-shadow: 0 2px 5px rgba(0,0,0,0.2);
-        }
+.book-entry > button[type="button"].add-book-btn {
+    width: 100%;
+    padding: 0.75rem 1rem;
+    background: linear-gradient(to bottom right, #34d399, #10b981);
+    color: white;
+    border: none;
+    border-radius: 0.375rem;
+    transition: transform 0.3s ease;
+    margin-top: 0.5rem;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
 
-  .book-entry > button[type="button"].add-book-btn:hover {
-            background: linear-gradient(to bottom right, var(--verde-base), var(--verde-scuro));
-        }
+.book-entry > button[type="button"].add-book-btn:hover {
+    transform: translateY(-2px);
+    background: linear-gradient(to bottom right, #10b981, #059669);
+    box-shadow: 0 6px 8px rgba(0, 0, 0, 0.15);
+}
+
+
+
+
+
+        
 
 /* Stile per il pulsante di rimozione (x) */
 .book-entry > button[type="button"].remove-book-btn {
