--- a/raccolta.html
+++ b/raccolta.html
@@ -70,28 +70,38 @@
             gap: 1rem;
         }
 
-   .content-wrapper {
+  .content-wrapper {
     max-width: 900px;
     width: 100%;
     margin: 2rem auto;
     padding: 0 1rem;
     position: relative;
-    margin-top: 60px;
 }
 
 .nav-icons {
-    position: absolute;
-    top: -60px;
-    left: -450px;
+    position: fixed;
+    top: 120px; /* Adjusted to be below the header */
+    left: max(20px, calc((100vw - 900px) / 2 - 100px)); /* Dynamic positioning */
     display: flex;
     align-items: center;
     gap: 3rem;
-    padding-top: 20px;
+    padding: 1rem;
+    background: rgba(255, 255, 255, 0.9); /* Semi-transparent background */
+    border-radius: 8px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    z-index: 100;
 }
 
+/* Responsive adjustments */
 @media (max-width: 1200px) {
     .nav-icons {
-        left: -200px;
+        position: sticky;
+        top: 0;
+        left: 0;
+        justify-content: flex-start;
+        margin-bottom: 1rem;
+        padding: 0.5rem;
+        background: white;
     }
 }
 
@@ -111,18 +121,18 @@
 }
 
         .nav-icons a {
-            color: #970a2c;
-            font-size: 1.25rem;
-            text-decoration: none;
-            transition: transform 0.3s ease;
-            display: flex;
-            align-items: center;
-            height: 100%;
-        }
+    color: #970a2c;
+    font-size: 1.25rem;
+    text-decoration: none;
+    transition: transform 0.3s ease;
+    display: flex;
+    align-items: center;
+    padding: 0.5rem;
+}
 
-        .nav-icons a:hover {
-            transform: scale(1.1);
-        }
+.nav-icons a:hover {
+    transform: scale(1.1);
+}
 
         .nav-icons a:first-child {
             font-weight: bold;
