--- a/index.html
+++ b/index.html
@@ -640,12 +640,13 @@ function showSuccessPopup(message) {
 
 
 <div class="mb-5">
-    <div class="flex items-center gap-2">
-        <label class="block mb-1 text-slate-700 font-medium">ISBN:</label>
-        <div class="relative group">
-            <i class="fas fa-info-circle text-gray-500 cursor-help text-sm"></i>
-            <div class="invisible group-hover:visible absolute left-1/2 -translate-x-1/2 bottom-full mb-2 px-3 py-2 bg-gray-900 text-white text-sm rounded-lg w-64 shadow-lg z-10">
-                <div class="absolute left-1/2 -translate-x-1/2 bottom-0 translate-y-full w-0 h-0 border-8 border-transparent border-t-gray-900"></div>
+    <div class="flex items-center gap-1">
+        <label class="block text-slate-700 font-medium">ISBN:</label>
+        <div class="relative group -mt-1">
+            <i class="fa-solid fa-circle-info text-[#970a2c] hover:text-[#6b1c32] transition-colors text-base"></i>
+            <div class="invisible group-hover:visible absolute left-1/2 -translate-x-1/2 bottom-full mb-2 px-3 py-2 bg-white border border-gray-200 text-gray-700 text-sm rounded-lg w-64 shadow-lg z-10">
+                <div class="absolute left-1/2 -translate-x-1/2 bottom-0 translate-y-full w-0 h-0 border-8 border-transparent border-t-white"></div>
+                <div class="absolute left-1/2 -translate-x-1/2 bottom-0 translate-y-full w-0 h-0 border-[9px] border-transparent border-t-gray-200"></div>
                 L'ISBN (International Standard Book Number) è un codice numerico di 10 o 13 cifre che identifica univocamente un libro. Lo trovi sul retro del libro vicino al codice a barre.
             </div>
         </div>
