--- a/index.html
+++ b/index.html
@@ -627,12 +627,7 @@ function showSuccessPopup(message) {
                
 
 
-<div class="mb-5">
-    <label class="block mb-1 text-slate-700 font-medium">Anno:</label>
-    <input type="number" min="1400" max="2024" class="book-year w-full px-3 py-2 border-2 border-gray-300 rounded focus:border-blue-500 focus:outline-none text-base">
 
-    <p class="hidden error-message text-sm text-red-500 mt-1">Anno non valido</p>
-</div>
 
 
 
@@ -642,7 +637,7 @@ function showSuccessPopup(message) {
 <div class="mb-5">
     <div class="flex items-center gap-1">
         <label class="block text-slate-700 font-medium">ISBN:</label>
-        <div class="relative group -mt-1">
+        <div class="flex items-center relative group">
             <i class="fa-solid fa-circle-info text-[#970a2c] hover:text-[#6b1c32] transition-colors text-base"></i>
             <div class="invisible group-hover:visible absolute left-1/2 -translate-x-1/2 bottom-full mb-2 px-3 py-2 bg-white border border-gray-200 text-gray-700 text-sm rounded-lg w-64 shadow-lg z-10">
                 <div class="absolute left-1/2 -translate-x-1/2 bottom-0 translate-y-full w-0 h-0 border-8 border-transparent border-t-white"></div>
