--- a/index.html
+++ b/index.html
@@ -638,7 +638,7 @@ function showSuccessPopup(message) {
     <div class="flex items-center gap-1">
         <label class="block text-slate-700 font-medium">ISBN:</label>
         <div class="flex items-center relative group">
-            <i class="fa-solid fa-circle-info text-[#970a2c] hover:text-[#6b1c32] transition-colors text-base"></i>
+            <span class="text-[#970a2c] hover:text-[#6b1c32] transition-colors text-base font-bold cursor-pointer">i</span>
             <div class="invisible group-hover:visible absolute left-1/2 -translate-x-1/2 bottom-full mb-2 px-3 py-2 bg-white border border-gray-200 text-gray-700 text-sm rounded-lg w-64 shadow-lg z-10">
                 <div class="absolute left-1/2 -translate-x-1/2 bottom-0 translate-y-full w-0 h-0 border-8 border-transparent border-t-white"></div>
                 <div class="absolute left-1/2 -translate-x-1/2 bottom-0 translate-y-full w-0 h-0 border-[9px] border-transparent border-t-gray-200"></div>
