--- a/index.html
+++ b/index.html
@@ -262,17 +262,37 @@ button[type="submit"] {
         .input-icon-wrapper { 
             position: relative; 
         } 
-        .input-icon { 
-            position: absolute; 
-            left: 12px; 
-            top: 50%; 
-            transform: translateY(-50%); 
-            color: #6B7280; 
-            z-index: 10;
-        } 
-        .input-with-icon { 
-            padding-left: 40px !important; 
-        }
+
+
+
+
+
+
+
+        
+.input-icon { 
+    position: absolute; 
+    left: 12px; 
+    top: 50%; 
+    transform: translateY(-50%); 
+    color: #9CA3AF;  /* Lighter gray */
+    z-index: 10;
+    font-weight: 300;  /* Thinner font weight */
+    opacity: 0.7;  /* Slightly transparent */
+}
+
+.input-icon-wrapper { 
+    position: relative; 
+} 
+
+.input-with-icon { 
+    padding-left: 40px !important; 
+}
+
+/* Optional: Add a subtle outline effect */
+.input-icon {
+    text-shadow: 0 0 1px rgba(156, 163, 175, 0.3);
+}
 
 
 
