--- a/index.html
+++ b/index.html
@@ -91,6 +91,25 @@ button[type="submit"] {
             align-items: center;
         }
 
+
+    @media (max-width: 768px) {
+    .top-banner {
+        padding: 0.5rem 1rem; /* Riduzione del padding */
+    }
+
+    .roma-logo {
+        height: 30px; /* Riduzione altezza logo */
+    }
+
+    .social-icons {
+        gap: 0.5rem; /* Riduzione spazio tra icone */
+    }
+
+    .social-icons a {
+        font-size: 1.2rem; /* Riduzione dimensione icone social */
+    }
+}
+
         .roma-logo {
             height: 40px;
         }
