--- a/raccolta.html
+++ b/raccolta.html
@@ -269,6 +269,16 @@
                 display: none !important; /* Nasconde la sezione "Biblioteca Elsa Morante" */
             }
         }
+
+
+
+
+        @media (max-width: 768px) {
+    header {
+        min-height: 2cm; /* Reduced from 4cm to 2cm */
+        padding: 1rem 0; /* Slightly reduced padding */
+    }
+}
     </style>
 </head>
 <body>
