--- a/index.html
+++ b/index.html
@@ -886,21 +886,22 @@ function showSuccessPopup(message) {
 
 
 
-    <footer class="bg-[#970a2c] text-white mt-16 py-4">
+
+    <footer class="bg-[#970a2c] text-white mt-16 py-8"> <!-- Increased padding -->
     <div class="container mx-auto px-4 md:px-6 flex flex-col md:flex-row items-center justify-between">
         <div class="mb-4 md:mb-0">
-            <!-- Reduced height of the logo -->
             <img src="footermorante.png" alt="Logo Biblioteca Morante" class="h-8 md:h-10">
         </div>
         
         <div class="flex flex-col md:flex-row md:space-x-8 space-y-2 md:space-y-0 text-center md:text-left text-sm">
-            <!-- First row -->
             <div class="flex items-center justify-center md:justify-start space-x-2">
                 <i class="fas fa-location-dot w-4"></i>
-                <span>Via Adolfo Cozza 7, Municipio X, 00121 Roma</span>
+                <span class="flex flex-col">
+                    <span>Via Adolfo Cozza 7</span>
+                    <span>Municipio X, 00121 Roma</span>
+                </span>
             </div>
             
-            <!-- Second row -->
             <div class="flex items-center justify-center md:justify-start space-x-4">
                 <div class="flex items-center space-x-2">
                     <i class="fas fa-phone w-4"></i>
@@ -908,7 +909,10 @@ function showSuccessPopup(message) {
                 </div>
                 <div class="flex items-center space-x-2">
                     <i class="fas fa-clock w-4"></i>
-                    <span>Lun-Ven 09:00-18:30, Sab 09:00-13:00</span>
+                    <span class="flex flex-col">
+                        <span>Lun-Ven 09:00-18:30</span>
+                        <span>Sab 09:00-13:00</span>
+                    </span>
                 </div>
             </div>
         </div>
