--- a/index.html
+++ b/index.html
@@ -28,9 +28,20 @@
 }
 
 /* Sostituisci il pulsante di invio con il colore amaranto dell'intestazione */
-button[type="submit"] {
-    background-color: #970a2c !important;
-}
+ button[type="submit"] {
+        background-color: #0078d7 !important; /* Azzurro intenso */
+        color: white; /* Testo in bianco per leggibilità */
+        border: none;
+        border-radius: 5px;
+        padding: 10px 20px;
+        font-size: 16px;
+        cursor: pointer;
+        transition: background-color 0.3s ease;
+    }
+    button[type="submit"]:hover {
+        background-color: #005a9e !important; /* Azzurro più scuro per effetto hover */
+    }
+
 
 
 
