--- a/index.html
+++ b/index.html
@@ -923,8 +923,8 @@ function showSuccessPopup(message) {
                 <div class="flex items-center space-x-2">
                     <i class="fas fa-clock w-4"></i>
                     <span class="flex flex-col">
-                        <span>Lun-Ven 09:00-18:30</span>
-                        <span>Sab 09:00-13:00</span>
+                        <span>Lunedì-Venerdì 09:00-18:30</span>
+                        <span>Sabato 09:00-13:00</span>
                     </span>
                 </div>
             </div>
