--- a/termini.html
+++ b/termini.html
@@ -473,11 +473,12 @@
   
 
 
-    <footer class="bg-[#970a2c] text-white mt-16 py-8"> <!-- Increased padding -->
+
+<footer class="bg-[#970a2c] text-white mt-16 py-8">
     <div class="container mx-auto px-4 md:px-6 flex flex-col md:flex-row items-center justify-between">
         <div class="mb-4 md:mb-0">
             <a href="https://www.bibliotechediroma.it/opac/library/Biblioteca%20Elsa%20Morante/RMBO2" target="_blank" rel="noopener noreferrer">
-                <img src="footermorante.png" alt="Logo Biblioteca Morante" class="h-8 md:h-10">
+                <img src="footermorante.png" alt="Logo Biblioteca Morante" class="h-6 md:h-8"> <!-- Reduced height -->
             </a>
         </div>
         
@@ -506,6 +507,7 @@
         </div>
     </div>
 </footer>
+   
 
 
    
