--- a/termini.html
+++ b/termini.html
@@ -473,34 +473,28 @@
   
 
 
-<footer class="bg-[#970a2c] text-white mt-16 py-8">
-    <div class="container mx-auto px-4 md:px-6 flex flex-col md:flex-row items-center justify-between">
-        <div class="mb-4 md:mb-0">
+<footer class="bg-[#970a2c] text-white mt-16 py-4"> <!-- Reduced padding -->
+    <div class="container mx-auto px-4 md:px-6 flex flex-col md:flex-row items-center justify-center space-y-3 md:space-y-0 md:space-x-6">
+        <div class="flex-shrink-0">
             <a href="https://www.bibliotechediroma.it/opac/library/Biblioteca%20Elsa%20Morante/RMBO2" target="_blank" rel="noopener noreferrer">
-                <img src="footermorante.png" alt="Logo Biblioteca Morante" class="h-5 md:h-6">
+                <img src="footermorante.png" alt="Logo Biblioteca Morante" class="h-6 md:h-8"> <!-- Reduced logo size -->
             </a>
         </div>
         
-        <div class="flex flex-col md:flex-row md:space-x-8 space-y-2 md:space-y-0 text-center md:text-left text-sm">
-            <div class="flex items-center justify-center md:justify-start space-x-2">
+        <div class="flex flex-col md:flex-row items-center text-center md:text-left text-xs md:text-sm space-y-2 md:space-y-0 md:space-x-4">
+            <div class="flex items-center space-x-2">
                 <i class="fas fa-location-dot w-4"></i>
-                <span class="flex flex-col">
-                    <span>Via Adolfo Cozza 7</span>
-                    <span>Municipio X, 00121 Roma</span>
-                </span>
+                <span>Via Adolfo Cozza 7, Municipio X, 00121 Roma</span>
             </div>
             
-            <div class="flex items-center justify-center md:justify-start space-x-4">
+            <div class="flex items-center space-x-4">
                 <div class="flex items-center space-x-2">
                     <i class="fas fa-phone w-4"></i>
                     <span>06 4546 0481 / 0483</span>
                 </div>
                 <div class="flex items-center space-x-2">
                     <i class="fas fa-clock w-4"></i>
-                    <span class="flex flex-col">
-                        <span>Lunedì-Venerdì 09:00-18:30</span>
-                        <span>Sabato 09:00-13:00</span>
-                    </span>
+                    <span>Lunedì-Venerdì 09:00-18:30, Sabato 09:00-13:00</span>
                 </div>
             </div>
         </div>
