--- a/termini.html
+++ b/termini.html
@@ -272,34 +272,32 @@ footer .container {
     gap: 1rem; /* Spaziatura minima */
 }
 
+
+
+
 footer img {
-    height: 35px; /* Logo leggermente più piccolo */
+    height: 45px; /* Increased from 35px */
     max-width: 100%;
-    margin-right: 1rem; /* Spaziatura tra logo e stringhe */
+    margin-right: 1rem;
 }
 
 footer .info {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    align-items: center;
-    gap: 1.5rem; /* Minore spazio tra blocchi di testo */
-    font-size: 0.85rem; /* Testo ridotto */
+    font-size: 0.95rem; /* Slightly larger from 0.85rem */
+    gap: 1.5rem;
 }
 
 footer .info > div {
-    display: flex;
-    align-items: center;
-    gap: 0.5rem;
-    line-height: 1.4; /* Migliore leggibilità */
+    gap: 0.7rem; /* Slightly increased spacing */
 }
+
+      
 
 footer .info span.block {
     display: block; /* Forza il rientro a capo per indirizzi e orari */
 }
 
 footer i {
-    font-size: 1rem; /* Icone ridimensionate */
+    font-size: 1.2rem; /* Slightly larger icons */
 }
 
 @media (max-width: 768px) {
