--- a/raccolta.html
+++ b/raccolta.html
@@ -166,11 +166,13 @@
         }
 
         footer {
-            background-color: var(--primary);
-            color: #fff;
-            text-align: center;
-            padding: 3.0rem 0;
-        }
+    background-color: var(--primary);
+    color: #fff;
+    text-align: center;
+    padding: 2.5rem 0;
+    min-height: 150px; /* Altezza minima del footer */
+}
+
 
         footer a {
             color: #fff;
