--- a/raccolta.html
+++ b/raccolta.html
@@ -182,12 +182,17 @@
         margin-bottom: 0.5rem;
     }
 
+        
+
     footer .info {
-        font-size: 0.85rem; /* Riduce il font dei testi */
-        display: flex;
-        justify-content: center; /* Centra orizzontalmente le informazioni */
-        gap: 2rem; /* Spaziatura tra le colonne */
-    }
+    font-size: 0.85rem; /* Keeps the font size smaller */
+    display: flex;
+    justify-content: flex-end; /* Aligns the content towards the right */
+    gap: 2rem; /* Keeps the spacing between the columns */
+    margin-top: -20px; /* Moves the content upwards */
+    padding-right: 20px; /* Adds a little right margin for spacing */
+}
+
 
     footer .info div {
         text-align: center; /* Centra ogni blocco */
