--- a/raccolta.html
+++ b/raccolta.html
@@ -191,6 +191,7 @@
     gap: 2rem; /* Keeps the spacing between the columns */
     margin-top: -15px; /* Moves the content upwards */
     padding-right: 20px; /* Adds a little right margin for spacing */
+    flex-wrap: wrap; /* Allows the content to break into two lines */
 }
 
 footer .info div {
@@ -198,6 +199,7 @@ footer .info div {
     line-height: 1.4; /* Provides a little space between lines */
     display: flex; /* Use flexbox to align icon and text horizontally */
     align-items: center; /* Vertically align the icon and text */
+    flex-basis: 100%; /* Ensures each div starts on a new line */
 }
 
 footer .info div i {
