--- a/raccolta.html
+++ b/raccolta.html
@@ -182,30 +182,17 @@
         margin-bottom: 0.5rem;
     }
 
-        
+    footer .info {
+        font-size: 0.85rem; /* Riduce il font dei testi */
+        display: flex;
+        justify-content: center; /* Centra orizzontalmente le informazioni */
+        gap: 2rem; /* Spaziatura tra le colonne */
+    }
 
-  footer .info {
-    font-size: 0.85rem; /* Keeps the font size smaller */
-    display: flex;
-    justify-content: flex-end; /* Aligns the content towards the right */
-    gap: 2rem; /* Keeps the spacing between the columns */
-    margin-top: -15px; /* Moves the content upwards */
-    padding-right: 20px; /* Adds a little right margin for spacing */
-    flex-wrap: wrap; /* Allows the content to break into two lines */
-}
-
-footer .info div {
-    text-align: left; /* Aligns the text to the left */
-    line-height: 1.4; /* Provides a little space between lines */
-    display: flex; /* Use flexbox to align icon and text horizontally */
-    align-items: center; /* Vertically align the icon and text */
-    flex-basis: 100%; /* Ensures each div starts on a new line */
-}
-
-footer .info div i {
-    margin-right: 8px; /* Adds a small gap between the icon and the text */
-}
-
+    footer .info div {
+        text-align: center; /* Centra ogni blocco */
+        line-height: 1.4; /* Leggero spazio tra le righe interne */
+    }
 
     footer .info div span {
         display: block; /* Ogni riga va su una nuova linea */
@@ -462,14 +449,3 @@ footer .info div i {
         </div>
     </div>
 </footer>
-
-
-
-
-
-
-
-    
-
-</body>
-</html>
