--- a/raccolta.html
+++ b/raccolta.html
@@ -185,19 +185,20 @@
     footer .info {
     font-size: 0.85rem;
     display: flex;
-    justify-content: flex-end; /* Changed from center to align right */
-    gap: 1rem; /* Reduced spacing between columns */
-    margin-top: -1rem; /* Moved up */
-    padding-right: 2rem; /* Added right padding to create margin */
+    justify-content: flex-end; /* Align to the right */
+    gap: 2.5rem; /* Increased spacing between columns */
+    margin-top: -2.5rem; /* Moved further up */
+    padding-right: 2rem; /* Right padding */
 }
 
 footer .info div {
-    text-align: right; /* Changed from center to align right */
-    line-height: 1.4;
+    text-align: right; /* Align text to the right */
+    line-height: 1.6; /* Slightly increased line height */
 }
 
 footer .info div span {
     display: block;
+    margin-bottom: 0.25rem; /* Added small margin between spans in each column */
 }
 
         
