--- a/raccolta.html
+++ b/raccolta.html
@@ -183,23 +183,21 @@
     }
 
     footer .info {
-    font-size: 0.85rem;
-    display: flex;
-    justify-content: flex-end; /* Align to the right */
-    gap: 2.5rem; /* Increased spacing between columns */
-    margin-top: -2.5rem; /* Moved further up */
-    padding-right: 2rem; /* Right padding */
-}
+        font-size: 0.85rem; /* Riduce il font dei testi */
+        display: flex;
+        justify-content: center; /* Centra orizzontalmente le informazioni */
+        gap: 2rem; /* Spaziatura tra le colonne */
+    }
 
-footer .info div {
-    text-align: right; /* Align text to the right */
-    line-height: 1.6; /* Slightly increased line height */
-}
+    footer .info div {
+        text-align: center; /* Centra ogni blocco */
+        line-height: 1.4; /* Leggero spazio tra le righe interne */
+    }
 
-footer .info div span {
-    display: block;
-    margin-bottom: 0.25rem; /* Added small margin between spans in each column */
-}
+    footer .info div span {
+        display: block; /* Ogni riga va su una nuova linea */
+    }
+        
 
         
      .print-button {
