--- a/termini.html
+++ b/termini.html
@@ -122,10 +122,10 @@
 .nav-icons {
     position: absolute;
     top: -40px;
-    left: 1rem; /* Added left padding to align with content */
+    left: -100px; /* Move far to the left of the content wrapper */
     display: flex;
     align-items: center;
-    gap: 3rem;
+    gap: 1rem;
     padding-top: 20px;
 }
 
