--- a/termini.html
+++ b/termini.html
@@ -108,57 +108,57 @@
            vertical-align: middle;
        }
 
-
-
-.content-wrapper {
+   .content-wrapper {
     max-width: 900px;
     width: 100%;
     margin: 2rem auto;
     padding: 0 1rem;
     position: relative;
-    margin-top: 60px;
+    margin-top: 30px; /* Reduced from 60px to move content up */
 }
 
 .nav-icons {
     position: absolute;
-    top: -60px;
-    left: 50%; /* Centrato rispetto al contenitore */
-    transform: translateX(calc(-50% - 400px)); /* Spostato a sinistra della larghezza desiderata */
+    top: -40px; /* Moved higher */
+    left: 0; /* Aligned to the left */
+    transform: none;
     display: flex;
     align-items: center;
     gap: 3rem;
     padding-top: 20px;
 }
 
-/* Responsive adjustments */
-@media (max-width: 1400px) {
-    .nav-icons {
-        transform: translateX(calc(-50% - 300px));
-    }
-}
-
-@media (max-width: 1200px) {
-    .nav-icons {
-        transform: translateX(calc(-50% - 200px));
-    }
-}
-
-@media (max-width: 992px) {
-    .nav-icons {
-        transform: translateX(calc(-50% - 100px));
-    }
-}
-
 @media (max-width: 768px) {
     .nav-icons {
         position: relative;
-        left: 0;
         top: 0;
-        transform: none;
+        left: 0;
+        padding: 0.5rem 0;
         justify-content: flex-start;
     }
 }
 
+       @media (max-width: 1200px) {
+           .nav-icons {
+               transform: translateX(calc(-50% - 200px));
+           }
+       }
+
+       @media (max-width: 992px) {
+           .nav-icons {
+               transform: translateX(calc(-50% - 100px));
+           }
+       }
+
+       @media (max-width: 768px) {
+           .nav-icons {
+               position: relative;
+               left: 0;
+               top: 0;
+               transform: none;
+               justify-content: flex-start;
+           }
+       }
 
        .nav-icons a {
            color: #970a2c;
