--- a/termini.html
+++ b/termini.html
@@ -119,8 +119,8 @@
 
 .nav-icons {
     position: absolute;
-    top: -40px; /* Moved higher */
-    left: 0; /* Aligned to the left */
+    top: -40px; 
+    left: -20px; /* Modificato da 0 a -20px per spostare più a sinistra */
     transform: none;
     display: flex;
     align-items: center;
