--- a/termini.html
+++ b/termini.html
@@ -130,14 +130,14 @@
 
 @media (max-width: 1200px) {
     .nav-icons {
-        transform: none; /* Rimosso qualsiasi transform */
+        transform: translateX(0); /* Rimosso calcolo */
         left: 0; /* Forzato a 0 */
     }
 }
 
 @media (max-width: 992px) {
     .nav-icons {
-        transform: none; /* Rimosso qualsiasi transform */
+        transform: translateX(0); /* Rimosso calcolo */
         left: 0; /* Forzato a 0 */
     }
 }
