--- a/termini.html
+++ b/termini.html
@@ -118,14 +118,14 @@
 }
 
 .nav-icons {
-    position: absolute;
-    top: -40px;
-    left: 0; /* Spostato a sinistra */
     display: flex;
     align-items: center;
     gap: 3rem;
     padding-top: 20px;
-    justify-content: flex-start; /* Modifica per allineare a sinistra */
+    justify-content: flex-start; /* Allinea le icone a sinistra */
+    position: relative; /* Modificato da absolute a relative */
+    top: 0; /* Rimosso il valore negativo per non spostare verso l'alto */
+    left: 0; /* Allinea a sinistra */
 }
 
 
