--- a/termini.html
+++ b/termini.html
@@ -121,12 +121,13 @@
     display: flex;
     align-items: center;
     gap: 3rem;
-    padding-top: 20px;
     justify-content: flex-start; /* Allinea le icone a sinistra */
-    position: relative; /* Modificato da absolute a relative */
-    top: 0; /* Rimosso il valore negativo per non spostare verso l'alto */
+    padding-top: 20px;
+    position: relative; /* Rimuovi il posizionamento assoluto */
+    top: 0; /* Rimuovi il top negativo */
     left: 0; /* Allinea a sinistra */
 }
+
 
 
 @media (max-width: 1200px) {
